@@ -1,3 +1,7 @@
+2003-03-13  Fumitoshi UKAI  <ukai@debian.or.jp>
+
+	* Makefile.in (distclean): added
+
 2003-03-13  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>
 
 	* [w3m-dev 03818] fix autoconf
